[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scene/Boss_Base.gd" type="Script" id=1]
[ext_resource path="res://Sprites/maquina_boss_base.png" type="Texture" id=2]
[ext_resource path="res://Sprites/maquina_boss_arma.png" type="Texture" id=3]
[ext_resource path="res://Sprites/maquina_boss_vida.png" type="Texture" id=4]
[ext_resource path="res://Sprites/explosiones.png" type="Texture" id=5]
[ext_resource path="res://BFG-FX/Contra SFX (29).wav" type="AudioStream" id=6]
[ext_resource path="res://BFG-FX/Contra SFX (15).wav" type="AudioStream" id=7]
[ext_resource path="res://BFG-FX/Contra SFX (12).wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.14502, 72.9586 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.80029, 5.97557 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 7.31563 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.69629, 7.51577 )

[sub_resource type="Animation" id=5]
resource_name = "arma1_idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Boss_Arma1/Boss:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boss_Arma1/Boss:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Boss_Arma1/Boss:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Boss_Arma1/Boss:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "arma2_idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Boss_Arma2/Boss:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boss_Arma2/Boss:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Boss_Arma2/Boss:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Boss_Arma2/Boss:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "base_idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Base_Vida/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Base_Vida/Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Base_Vida/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Base_Vida/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Base_Vida/Sprite2:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Base_Vida/Sprite3:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Boss_Arma1/Boss:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boss_Arma1/Boss:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Boss_Arma1/Boss:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Boss_Arma1/Boss:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=9]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Boss_Arma2/Boss:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Boss_Arma2/Boss:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Boss_Arma2/Boss:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Boss_Arma2/Boss:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=10]
resource_name = "explosion_base"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Base_Vida/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Base_Vida/Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Base_Vida/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Base_Vida/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Base_Vida/Sprite2:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Base_Vida/Sprite2:vframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Base_Vida/Sprite2:hframes")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Base_Vida/Sprite2:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Base_Vida/Sprite3:texture")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Base_Vida/Sprite3:vframes")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Base_Vida/Sprite3:hframes")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Base_Vida/Sprite3:frame")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[node name="Boss_Base" type="Position2D"]
position = Vector2( 4030.28, -241.147 )
scale = Vector2( 1.16, 1.5 )
script = ExtResource( 1 )

[node name="base" type="StaticBody2D" parent="." groups=[
"suelo",
]]
editor/display_folded = true
position = Vector2( -4.25317, 46.8368 )

[node name="Sprite" type="Sprite" parent="base"]
position = Vector2( -85.3882, -13.5935 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="base"]
position = Vector2( -135.782, -4.06277 )
shape = SubResource( 1 )

[node name="Boss_Arma1" type="StaticBody2D" parent="." groups=[
"enemigo",
"boss",
]]
editor/display_folded = true
position = Vector2( -133.809, 38.3305 )
scale = Vector2( 0.862069, 0.666667 )

[node name="Boss" type="Sprite" parent="Boss_Arma1"]
editor/display_folded = true
scale = Vector2( 1.16, 1.5 )
texture = ExtResource( 3 )
hframes = 2

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Boss_Arma1/Boss"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss_Arma1"]
position = Vector2( -0.618408, 0 )
shape = SubResource( 2 )

[node name="spawn" type="Position2D" parent="Boss_Arma1"]
position = Vector2( -12.9084, 0.253113 )

[node name="Boss_Arma2" type="StaticBody2D" parent="." groups=[
"enemigo",
"boss",
]]
editor/display_folded = true
position = Vector2( -116.859, 38.3305 )
scale = Vector2( 0.862069, 0.666667 )

[node name="Boss" type="Sprite" parent="Boss_Arma2"]
scale = Vector2( 1.16, 1.5 )
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Boss_Arma2/Boss"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss_Arma2"]
position = Vector2( 5.1687, -0.202438 )
shape = SubResource( 3 )
disabled = true

[node name="spawn" type="Position2D" parent="Boss_Arma2"]
position = Vector2( -6.54199, -0.654205 )

[node name="Base_Vida" type="StaticBody2D" parent="." groups=[
"enemigo",
"boss",
]]
editor/display_folded = true
position = Vector2( -89.5334, 82.2336 )

[node name="Sprite" type="Sprite" parent="Base_Vida"]
position = Vector2( 0, 0.524466 )
scale = Vector2( 1, 1.13609 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base_Vida"]
position = Vector2( -37.4377, -0.71048 )
shape = SubResource( 4 )
disabled = true

[node name="Sprite2" type="Sprite" parent="Base_Vida"]
position = Vector2( -37.1086, -1.10761 )
vframes = 2
hframes = 3
frame = 5

[node name="Sprite3" type="Sprite" parent="Base_Vida"]
position = Vector2( 36.7363, -0.531748 )
vframes = 2
hframes = 3
frame = 5

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/arma1_idle = SubResource( 5 )
anims/arma2_idle = SubResource( 6 )
anims/base_idle = SubResource( 7 )
anims/explosion_arma1 = SubResource( 8 )
anims/explosion_arma2 = SubResource( 9 )
anims/explosion_base = SubResource( 10 )

[node name="sfx_muerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="sfx_golpe" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="sfx_final" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
